fix: windows layout bug

--- a/app/components/InfoBanner/InfoBanner.module.scss
+++ b/app/components/InfoBanner/InfoBanner.module.scss
@@ -8,4 +8,5 @@
   padding: 1.0417vw;
   display: flex;
   justify-content: space-between;
+  margin-top: 2vw;
 }
