--- a/app/globals.css
+++ b/app/globals.css
@@ -11,7 +11,9 @@ html, body {
   background-color: #0F0F0F;
   list-style: none;
 }
-
+html::-webkit-scrollbar {
+  display: none;
+}
 a {
   color: inherit;
   text-decoration: none;
